prototypes/p4a/tests/multifile/valid/multifile_basic/db.hll
module db

export service UserRepo {
    function find(Int id) -> Option<String>
}

export provide UserRepo {
    function find(Int id) -> Option<String> {
        Some("user_" + id)
    }
}
