prototypes/p4a/tests/multifile/invalid/multifile_visibility/lib.hll
module lib

function privateHelper() -> Int { 42 }

export function publicFn() -> Int { 100 }
